# Bakedangelo

./: .gitignore  README.md  pyproject.toml
bakedangelo/: bakedangelo.py  bakedsdf.py  method_configs.py  volsdf.py
bakedangelo/engine/: schedulers.py
bakedangelo/field_components/: encodings.py
bakedangelo/fields/: sdf_field.py
bakedangelo/model_components/: ray_samplers.py
bakedangelo/models/: bakedangelo.py  bakedsdf.py  volsdf.py
outputs/kitchen/bakedangelo/2023-11-26_153730/: config.yml
outputs/unnamed/bakedangelo/2023-11-26_154019/: config.yml
