[project]
name = "bakedangelo"
description = "Bakedangelo implementation in nerfstudio."
version = "0.0.1"

dependencies = ["nerfstudio >= 0.3.4"] 

[tool.setuptools.packages.find]
include = ["bakedangelo*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
method-template = 'bakedangelo.method_configs:bakedangelo'